--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+   "homepage": "https://usuario.github.io/tpTresLab-reactjs",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
